texts/batch endpoint (#43)
* more API drafting

* Adding some missing foreign keys

* Updated JS engine

* Added ER diagrams

* changed database.yml.example to MySQL

* Added Vagrantfile with basic server provisioning

* Damir getting started (#37)

* removed duplicated as: statement in routes.rb

* fixed wrong cache key in Expression.cached_translations_count method

* ElasticSearch to started automatically in Vagrant

* Allowed external connection to MySQL in Vagrant via port 3309


* Fleshed out response object for /text/{id}

* DB migrations cleanup (#38)

* Added [4.2] version to migrations with missed version.

* Regenerated schema file using production copy from Oct 2021

* Squashed all migrations prior to 2018/09/17 (made in Rails version < 5)


* Admin keys UI (#39)

* Added Vagrant- and IDE- generated files to .gitignore

* Initial version of API Keys UI


* Added simple antispam protection to Api Key creation action (#40)


* modified downloads logic. (#41)

Moved file generation to service MakeFreshDownloadable, so insted of direct sending data it will return Downloadable object we can reuse in API.

Updated ManifestationController and AnthologiesController to use this service for download actions.

Also removed hidden :os param on download form, as it was hardcoded as 'Windows'. It only was used for TXT generation, and now we always generate TXT with Windows linebreaks


* api/v1/texts/{id} endpoint (#42)

* api/v1/texts/{id} endpoint

* added tests for api/v1/texts/{id} endpoint


* renamed chewy.yml to chewy.yml.sample and added chewy.yml to .gitignore

* Regenerated binstubs for rails using `bundle exec rake app:update:bin
`
Removed deprecated /script/rails script

* Implemented /texts/batch endpoint
Modified key check to fail with unauthorized status in a case of error
Modified API to fail with not_found status if Manifestation is not found
