# app/controllers/manifestation_controller.rb
@@ -286,14 +286,16 @@ class ManifestationController < ApplicationController
   def download
     @m = Manifestation.find(params[:id])
     impressionist(@m) unless is_spider?
-    dl = @m.fresh_downloadable_for(params[:format])
-    if dl
-      redirect_to rails_blob_url(dl.stored_file, disposition: :attachment)
-    else
-      filename = "#{@m.safe_filename}.#{params[:format]}"
-      html = "<!DOCTYPE html PUBLIC \"-//W3C//DTD XHTML 1.0 Transitional//EN\" \"http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd\"><html xmlns=\"http://www.w3.org/1999/xhtml\" xml:lang=\"he\" lang=\"he\" dir=\"rtl\"><head><meta http-equiv=\"Content-Type\" content=\"text/html; charset=utf-8\" /></head><body dir='rtl' align='right'><div dir=\"rtl\" align=\"right\">#{@m.title_and_authors_html}"+MultiMarkdown.new(@m.markdown).to_html.force_encoding('UTF-8').gsub(/<figcaption>.*?<\/figcaption>/,'')+"\n\n<hr />"+I18n.t(:download_footer_html, url: url_for(action: :read, id: @m.id))+"</div></body></html>"
-      do_download(params[:format], filename, html, @m, @m.author_string)
+
+    format = params[:format]
+    unless Downloadable.doctypes.include?(format)
+      flash[:error] = t(:unrecognized_format)
+      redirect_to manifestation_read_path(download_entity.id) # TODO: handle anthology case
+      return
     end
+
+    dl = GetFreshManifestationDownloadable.call(@m, format)
+    redirect_to rails_blob_url(dl.stored_file, disposition: :attachment)
   end
 
   def render_html
